# diff_drive_robot_package

./: README.md  package.xml  setup.cfg  setup.py
config/: gazebo_ros2_control.yaml  localization.yaml  localization_ros2_control.yaml
launch/: description.launch.py  localization.launch.py  sim.launch.py
rviz/: show_model.rviz  sim.rviz
urdf/: README.md  core.xacro  robot.urdf.xacro
urdf/assets/: gazebo_control.xacro  ros2_control.xacro
urdf/sensors/: camera.xacro  depth_camera.xacro  gps.xacro  imu.xacro  lidar.xacro  uwb.xacro
worlds/: garden.world  uwb_test_world.world
worlds/models/garden/: model.config  model.sdf
